# biliardo_triangolare

./: .clang-format  App.cpp  Biliardo.cpp  BiliardoAperto.cpp  BiliardoChiuso.cpp  BiliardoChiusoDx.cpp  BiliardoChiusoSx.cpp  BiliardoFunctions.cpp  CMakeLists.txt  Designer.cpp  Gui.cpp  README.md  Relazione.md  Statistics.cpp  main.cpp
benchmarks/: CMakeLists.txt  biliardoBenchmark.cpp
include/: App.hpp  Biliardo.hpp  BiliardoAperto.hpp  BiliardoChiuso.hpp  BiliardoChiusoDx.hpp  BiliardoChiusoSx.hpp  BiliardoFunctions.hpp  Designer.hpp  Gui.hpp  Statistics.hpp  doctest.h  statistics.hpp  types.hpp
tests/: BiliardoTest.cpp  CMakeLists.txt  biliardoTest.cpp  guiTest.cpp
